Installation: Java 23
- added a note about Java 23